# Ashortai

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  COLAB_GUIDE.md  Colab_Quickstart.ipynb  Dockerfile  README.md  README_ID.md  cleanup.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sources.json  story_recipe.json
clipping/: clip_config.py  colab_utils.py  config.py  diarization.py  engine.py  logger.py  metadata.py  runner.py  story_runner.py  studio.py
clipping/story/: __init__.py  assembler.py  loader.py  source_manager.py
clipping/studio/: core.py  effects.py  face_detection.py  render_camera_switch.py  render_hybrid.py  render_split_screen.py  subtitles.py  thumbnail.py  typography.py
docs/: SHOPEE X ARTEK X CLIPPO.docx  STORY_CLIP.md
example/: clip_config.sample.json
example/story/: sources.sample.json  story_recipe.sample.json
notebooks/: OSC_FullForm.ipynb  OSC_Optimized.ipynb  OSC_PasteConfig.ipynb  OSC_Simple.ipynb  OSC_T4_Quick.ipynb  OpenSource_Clipping_Optimized.ipynb  sample.env
web/: __init__.py
web/api/: __init__.py  app.py  config_adapter.py  models.py  store.py  worker.py
web/api/routes/: __init__.py  files.py  jobs.py  settings.py
web/dashboard/: index.html  package.json  vite.config.js
web/dashboard/src/: App.jsx  api.js  index.css
web/dashboard/src/pages/: Dashboard.jsx  JobDetail.jsx  NewJob.jsx  Settings.jsx
