[project]
name = "opensource-clipping"
version = "1.0.7"
description = "AI Auto-Clipper & Teaser Generator — converts long videos into viral short-form clips"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[default]",
    "faster-whisper",
    "google-genai",
    "mediapipe",
    "opencv-python",
    "Pillow",
    "requests",
    "python-dotenv",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "ultralytics",
    "pyannote.audio",
    "torch",
    "torchaudio",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "openai",
    "gdown",
    "youtube-transcript-api",
]

[project.scripts]
clipping = "main:main"
